force-app/main/default/objects/leaseworks__Deal_Summaries_Configuration__mdt/leaseworks__Deal_Summaries_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Assets in Deal, Commercial Terms and Deal summary fields</description>
    <label>Deal Summaries Configuration</label>
    <pluralLabel>Deal Summaries Configurations</pluralLabel>
</CustomObject>