force-app/main/default/objects/leaseworks__Deal_Summaries_Configuration__mdt/fields/leaseworks__Asset_In_Deal_Summary_Order__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_In_Deal_Summary_Order__c</fullName>
    <description>Please search for internal documentation &#39;Configuration of summary fields on Deal&#39; to read detailed instructions on how to configure these fields</description>
    <inlineHelpText>How to order each Asset in Deal record in the summary, in the following syntax: &#39;FieldAPI1 ASC/DESC, FieldAPI2 ASC/DESC&#39;, etc.</inlineHelpText>
    <label>Asset In Deal Summary Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>