force-app/main/default/objects/leaseworks__Deal_Summaries_Configuration__mdt/fields/leaseworks__Asset_In_Deal_Summary_Tags_List__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_In_Deal_Summary_Tags_List__c</fullName>
    <description>Please search for internal documentation &apos;Configuration of summary fields on Deal&apos; to read detailed instructions on how to configure these fields</description>
    <inlineHelpText>Comma-separated list of fields (using API names) that correspond in order to the tags (i.e. the numbers surrounded by {}) defined in the configuration field</inlineHelpText>
    <label>Asset In Deal Summary Tags List</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>