force-app/main/default/objects/leaseworks__Deal_Summaries_Configuration__mdt/fields/leaseworks__Assets_in_Deal_Summary_Configuration__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assets_in_Deal_Summary_Configuration__c</fullName>
    <description>Please search for internal documentation &apos;Configuration of summary fields on Deal&apos; to read detailed instructions on how to configure these fields</description>
    <inlineHelpText>Free text + &apos;tag numbers&apos; (starting with 0 and surrounded by curly brackets) for each Asset in Deal&apos;s summary. Ex: MSN: {0}, Rent: ${1}K, Type: {2}, Age: {3} years</inlineHelpText>
    <label>Assets in Deal Summary Configuration</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>