force-app/main/default/objects/leaseworks__Deal_Summaries_Configuration__mdt/fields/leaseworks__Commercial_Terms_Summary_Configuration__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Commercial_Terms_Summary_Configuration__c</fullName>
    <description>Please search for internal documentation &#39;Configuration of summary fields on Deal&#39; to read detailed instructions on how to configure these fields</description>
    <inlineHelpText>Free text + &#39;tag numbers&#39; (starting with 0 and surrounded by curly brackets) for each Commercial Terms summary. Ex: IRR: {0}%</inlineHelpText>
    <label>Commercial Terms Summary Configuration</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>